2008-08-10 Sancho Lerena <slerena@gmail.com>

	* Deleted some code from future 1.4 (trunk) in stable (1.3.x) branch.
	
	This is the first line of ChangeLog for 1.3.x branch.
