@@ -70,7 +70,7 @@ $lang_label["normal_mode"]="Modo normal";
 $lang_label["update"]="Actualizar";
 $lang_label["create"]="Crear";
 
-$lang_label["module_name"]="Nombre módulo";
+$lang_label["module_name"]="Nombre del módulo";
 $lang_label["module_type"]="Tipo módulo";
 $lang_label["module_update_create"]="Edición/Creación de módulo";
 
@@ -533,15 +533,15 @@ $lang_label["snmp_assigned_alerts"]="Alertas SNMP";
 $lang_label["max_alerts"]="Número máximo de alertas";
 $lang_label["min_alerts"]="Número mínimo de alertas";
 
-$lang_label["module_group"]="Grupo módulos";
-$lang_label["ip_target"]="IP destino";
+$lang_label["module_group"]="Grupo de SNmódulos";
+$lang_label["ip_target"]="IP de destino";
 $lang_label["tcp_rcv"]="Recibir TCP";
 $lang_label["tcp_send"]="Enviar TCP";
 $lang_label["tcp_port"]="Puerto TCP";
 $lang_label["maxdata"]="Dato máx.";
 $lang_label["mindata"]="Dato mín.";
-$lang_label["snmp_oid"]="SNMP OID";
-$lang_label["module_interval"]="Intervalo módulo";
+$lang_label["snmp_oid"]="OID SNMP";
+$lang_label["module_interval"]="Intervalo del módulo";
 $lang_label["snmp_community"]="Comunidad SNMP";
 $lang_label["server_asigned"]="Servidor asignado";
 $lang_label["remote"]="Remota";
@@ -605,7 +605,7 @@ $lang_label["no_event"]="No hay eventos";
 $lang_label["agent_access_rate"]="Accesibilidad agente (24h)";
 $lang_label["agent_module_shareout"]="Distribución de módulos";
 $lang_label["int"]="Itv."; // Nombre corto para intervalo
-$lang_label["manage_servers"]="Gestión servidores";
+$lang_label["manage_servers"]="Gestión de servidores";
 $lang_label["update_server"]="Actualizar servidor";
 $lang_label["upd_server_ok"]="Servidor actualizado correctamente";
 $lang_label["upd_server_no"]="Ha habido un problema al actualizar el servidor";
@@ -645,7 +645,7 @@ $lang_label["validate_event_failed"]="Validación de evento fallida";
 $lang_label["tactical_server_information"]="Información táctica del servidor";
 $lang_label["show_unknown"]="Mostrar módulos desconocidos en vista global";
 $lang_label["show_lastalerts"]="Mostrar alertas disparadas en la vista global";
-$lang_label["manage_modules"]="Gestionar módulos";
+$lang_label["manage_modules"]="Gestión de módulos";
 $lang_label["modify_module_ok"]="Actualización de módulos correcta";
 $lang_label["modify_module_no"]="Problema al modificar los módulos";
 $lang_label["module_management"]="Gestión de módulos";
@@ -767,7 +767,7 @@ $lang_label["style_template"]="Plantilla de estilo";
 $lang_label["report_name"]="Nombre de informe";
 $lang_label["custom_reporting_builder"]="Creador de informes personalizados";
 $lang_label["report_builder"]="Creador de informes";
-$lang_label["manage_reporting"]="Gestionar informes";
+$lang_label["manage_reporting"]="Gestión de informes";
 $lang_label["report_items"]="Reportar elementos";
 $lang_label["period"]="Periodo";
 $lang_label["reporting_item_add"]="Añadir elemento al informe";
