@@ -1,4 +1,9 @@
-2008-08-10 Sancho Lerena <slerena@gmail.com>
+2008-04-01  Jorge Gonzalez  <jorge.gonzalez@artica.es>
+
+	* /pandora_console/include/languages/language_es_es.php: Updated
+	  Spanish translation.
+
+2008-08-10  Sancho Lerena  <slerena@gmail.com>
 
 	* Deleted some code from future 1.4 (trunk) in stable (1.3.x) branch.
 	
